<?xml version="1.0"?>
<package format="2">
  <name>air_hockey_referee</name>
  <version>0.0.0</version>
  <description>The air_hockey_referee package</description>
  <maintainer email="puze@robot-learning.de">puze</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>air_hockey_msgs</depend>
  <depend>gazebo_msgs</depend>

  <export>
  </export>
</package>
