<?xml version="1.0"?>
<package format="2">
  <name>puck_tracker</name>
  <version>0.0.0</version>
  <description>The puck_tracker package</description>

  <maintainer email="davide@robot-learning.de">Davide Tateo</maintainer>
  <license>MIT</license>

  <author email="davide@robot-learning.de">Davide Tateo</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>
